--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@google-cloud/secret-manager": "^5.0.1",
+    "@types/mysql": "^2.15.23",
     "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
     "google-auth-library": "^9.1.0",
     "jest": "^29.7.0",
+    "mysql": "^2.18.1",
     "ts-node": "^10.9.1"
   },
   "scripts": {
     "run": "ts-node index.ts",
     "test": "jest",
-    "update": "rm -f package-lock.json && npm install"
+    "update": "rm -f package-lock.json && npm install",
+    "set-npm": "npm config set registry https://registry.npmjs.org/"
   }
 }
